lip claimant response
lip claimant response

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,14 @@
       {{ serviceName }}
     </h1>
 
+    <a href="task-list-1-individual.html">Start here if claimant is an individual</a>
+
+    <div class="govuk-!-padding-bottom-4"></div>
+
+    <a href="task-list-1-business.html">Start here if claimant is a business</a>
+
+    <div class="govuk-!-padding-bottom-7"></div>
+
     {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
   </div>
 </div>
