--- a/app/views/welsh-language.html
+++ b/app/views/welsh-language.html
@@ -47,7 +47,7 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
-  name: "whereDoYouLive",
+  name: "whatlanuagespeaking",
   fieldset: {
     legend: {
       isPageHeading: true,
@@ -73,7 +73,7 @@
 <h2 class="govuk-heading-s">What languages will the documents be provided in?</h2>
 
 {{ govukRadios({
-    name: "whereDoYouLive",
+    name: "whatlanguagedocuments",
     fieldset: {
       legend: {
         isPageHeading: true,
