updates to mediation guidance pages

--- a/app/views/telephone-mediation-individual.html
+++ b/app/views/telephone-mediation-individual.html
@@ -41,9 +41,9 @@ text: "Subsection"
       Telephone mediation
     </h1>
 
-    <p>If the claimant disagrees with your response, you must take part in mediation. A telephone mediation appointment will be scheduled at no additional cost.</p>
+    <p>You have rejected the claimant’s offer of £50. The next step is telephone mediation to see if an agreement can be reached before going to court.</p>
 
-    <p>An impartial mediator will speak with both parties to see if an agreement can be reached before the case goes to court. You will be able to explain your reasons for rejecting the claim in more detail.</p>
+    <p>An impartial mediator will speak with both parties independently. You will be able to explain your reasons for rejecting the offer in more detail.</p>
 
     <p>Mediation will last no longer than one hour and will take place by telephone.</p>
 
@@ -62,14 +62,13 @@ text: "Subsection"
     <h2 class="govuk-heading-m">
       What happens if you do not attend your mediation appointment?
     </h2>
-    <p>If you do not attend your mediation appointment, the judge may apply a penalty. This could include the judge automatically ruling in the other party’s favour, or paying for some or all of the other party’s costs.</p>
+    <p>If you do not attend your mediation appointment, the judge may apply a penalty. This could include the judge ordering you to pay costs, or automatically ruling in the other party’s favour.</p>
 
     <h2 class="govuk-heading-m">
       After the phone call
     </h2>
 
-    <p>If mediation is successful, you will not have to go to court. You will make a agreement over the phone, which we will email to you. You will not have to sign anything, 
-      but the agreement is binding.</p>
+    <p>If mediation is successful, you will not have to go to court. You will make an agreement over the phone, which we will email to you. You will not have to sign anything, but the agreement is binding.</p>
     <p>If either party breaks the terms of the agreement, the other party can go back to the court to ask for a judgment or hearing.</p>
     <p>If you do not reach an agreement at mediation, you may need to attend a court hearing. Any mediation discussions cannot be mentioned at the hearing.</p>
 
