--- a/app/views/telephone-mediation-business.html
+++ b/app/views/telephone-mediation-business.html
@@ -70,10 +70,9 @@ text: "Subsection"
       After the phone call
     </h2>
 
-    <p>If mediation is successful, you will not have to go to court. An agreement will be made over the phone, which we will email to you. You will not have to sign anything, but the agreement is binding..</p>
+    <p>If mediation is successful, you will not have to go to court. An agreement will be made over the phone, which we will email to you. You will not have to sign anything, but the agreement is binding.</p>
     <p>If either party breaks the terms of the agreement, the other party can go back to the court to ask for a judgment or hearing.</p>
     <p>If an agreement is not reached at mediation, you may need to attend a court hearing. Any mediation discussions cannot be mentioned at the hearing.</p>
-
 
     <a href="task-list-3-business.html" class="govuk-button" data-module="govuk-button">
       Continue
