--- a/app/views/telephone-mediation-business.html
+++ b/app/views/telephone-mediation-business.html
@@ -41,7 +41,7 @@ text: "Subsection"
       Telephone mediation
     </h1>
 
-    <p>You have rejected the claimant’s offer of £50. The next step is telephone mediation to see if an agreement can be reached before going to court.</p>
+    <p>You wish to proceed with the claim. The next step is telephone mediation to see if an agreement can be reached before going to court.</p>
 
     <p>An impartial mediator will speak with both parties independently. You will be able to explain your reasons for rejecting the offer in more detail.</p>
 
