updates required post testing

--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -106,11 +106,14 @@
             </div>
           </dl>
           
-          <form action="/index" method="post" novalidate>
-            <input type="hidden" name="answers-checked" value="true">
-            <button class="govuk-button" data-module="govuk-button">
+          <a href="confirmation-page.html">
+            <button class="govuk-button" type="submit">
               Accept and send
             </button>
+          </a>          
+    
+          
+          
           </form>
         </div>
       </div>
