--- a/app/views/task-list-1-business.html
+++ b/app/views/task-list-1-business.html
@@ -89,7 +89,7 @@
       <ul class="app-task-list__items">
         <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            <a class="govuk-link--no-visited-state" href="#.html" aria-describedby="early-conciliation-status">
+            <a class="govuk-link--no-visited-state" href="check-your-answers.html" aria-describedby="early-conciliation-status">
               Check and submit your response
             </a>
           </span>
