changes to mediation page copy

--- a/app/views/telephone-mediation-individual.html
+++ b/app/views/telephone-mediation-individual.html
@@ -41,9 +41,9 @@ text: "Subsection"
       Telephone mediation
     </h1>
 
-    <p>You wish to proceed with the claim. The next step is telephone mediation to see if an agreement can be reached before going to court.</p>
+    <p>You wish to proceed with the claim. The next step is mediation. A telephone mediation appointment will be scheduled at no additional cost.</p>
 
-    <p>An impartial mediator will speak with both parties independently. You will be able to explain your reasons for rejecting the offer in more detail.</p>
+    <p>An impartial mediator will speak with both parties to see if an agreement can be reached before the case goes to court. You will be able to explain your reasons for rejecting the offer in more detail.</p>
 
     <p>Mediation will last no longer than one hour and will take place by telephone.</p>
 
