updates to task list structure

--- a/app/views/task-list-2-business.html
+++ b/app/views/task-list-2-business.html
@@ -81,20 +81,10 @@
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               <a class="govuk-link--no-visited-state" href="telephone-mediation-business.html" aria-describedby="early-conciliation-status">
-                Telephone mediation
+                Mediation
               </a>
             </span>
             <strong class="govuk-tag govuk-tag--grey app-task-list__tag dashboard-tags" id="early-conciliation-status">Incomplete</strong>
-
-            <li class="app-task-list__item">
-                <span class="app-task-list__task-name">
-                  <a class="govuk-link--no-visited-state" href="#.html" aria-describedby="early-conciliation-status">
-                    Availability for mediation
-                  </a>
-                </span>
-                <strong class="govuk-tag govuk-tag--grey app-task-list__tag dashboard-tags" id="early-conciliation-status">Incomplete</strong>
-      
-      
       
         </ul>
   
