--- a/app/views/telephone-mediation-business.html
+++ b/app/views/telephone-mediation-business.html
@@ -75,7 +75,7 @@ text: "Subsection"
     <p>If either party breaks the terms of the agreement, the other party can go back to the court to ask for a judgment or hearing.</p>
     <p>If an agreement is not reached at mediation, you may need to attend a court hearing. Any mediation discussions cannot be mentioned at the hearing.</p>
 
-    <a href="task-list-3-business.html" class="govuk-button" data-module="govuk-button">
+    <a href="is-name-attending-business.html" class="govuk-button" data-module="govuk-button">
       Continue
     </a>
 
