--- a/app/views/telephone-mediation-individual.html
+++ b/app/views/telephone-mediation-individual.html
@@ -73,7 +73,7 @@ text: "Subsection"
     <p>If you do not reach an agreement at mediation, you may need to attend a court hearing. Any mediation discussions cannot be mentioned at the hearing.</p>
 
 
-    <a href="task-list-3-individual.html" class="govuk-button" data-module="govuk-button">
+    <a href="can-mediation-use-telephone-individual.html" class="govuk-button" data-module="govuk-button">
       Continue
     </a>
 
