task list updates

--- a/app/views/task-list-2-individual.html
+++ b/app/views/task-list-2-individual.html
@@ -77,22 +77,32 @@
             </a>
           </span>
           <strong class="govuk-tag govuk-tag--dark-blue app-task-list__tag dashboard-tags" id="early-conciliation-status">Completed</strong>
-
-          <li class="app-task-list__item">
-            <span class="app-task-list__task-name">
-              <a class="govuk-link--no-visited-state" href="telephone-mediation-individual.html" aria-describedby="early-conciliation-status">
-                Mediation
-              </a>
-            </span>
-            <strong class="govuk-tag govuk-tag--grey app-task-list__tag dashboard-tags" id="early-conciliation-status">Incomplete</strong>
     
 
           </ul>
+
+          <li>
+            <h2 class="app-task-list__section">
+              <span class="app-task-list__section-number">3. </span> Mediation availability
+            </h2>
+            <ul class="app-task-list__items">
+             
+      
+                <li class="app-task-list__item">
+                  <span class="app-task-list__task-name">
+                    <a class="govuk-link--no-visited-state" href="telephone-mediation-individual.html" aria-describedby="early-conciliation-status">
+                      Mediation
+                    </a>
+                  </span>
+                  <strong class="govuk-tag govuk-tag--grey app-task-list__tag dashboard-tags" id="early-conciliation-status">Incomplete</strong>
+          
+      
+                </ul>
     
     <!-- section 3 -->  
     <li>
       <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">3. </span> Submit
+        <span class="app-task-list__section-number">4. </span> Submit
       </h2>
       <ul class="app-task-list__items">
         <li class="app-task-list__item">
