--- a/app/views/task-list-4-individual.html
+++ b/app/views/task-list-4-individual.html
@@ -65,7 +65,7 @@
       <!-- Section 2 -->
       <li>
         <h2 class="app-task-list__section">
-          <span class="app-task-list__section-number">2. </span> Choose what to do next
+          <span class="app-task-list__section-number">2. </span> Your response
         </h2>
         <ul class="app-task-list__items">
           <li class="app-task-list__item">
@@ -81,7 +81,7 @@
   
             <li>
               <h2 class="app-task-list__section">
-                <span class="app-task-list__section-number">3. </span> Mediation availability
+                <span class="app-task-list__section-number">3. </span> Mediation
               </h2>
               <ul class="app-task-list__items">
                
@@ -89,7 +89,7 @@
                   <li class="app-task-list__item">
                     <span class="app-task-list__task-name">
                       <a class="govuk-link--no-visited-state" href="telephone-mediation-individual.html" aria-describedby="early-conciliation-status">
-                        Mediation
+                        Mediation availability
                       </a>
                     </span>
                     <strong class="govuk-tag govuk-tag--dark-blue app-task-list__tag dashboard-tags" id="early-conciliation-status">Completed</strong>
