--- a/app/views/task-list-2-individual.html
+++ b/app/views/task-list-2-individual.html
@@ -82,7 +82,7 @@
 
           <li>
             <h2 class="app-task-list__section">
-              <span class="app-task-list__section-number">3. </span> Mediation availability
+              <span class="app-task-list__section-number">3. </span> Mediation
             </h2>
             <ul class="app-task-list__items">
              
@@ -90,7 +90,7 @@
                 <li class="app-task-list__item">
                   <span class="app-task-list__task-name">
                     <a class="govuk-link--no-visited-state" href="telephone-mediation-individual.html" aria-describedby="early-conciliation-status">
-                      Mediation
+                      Mediation availability
                     </a>
                   </span>
                   <strong class="govuk-tag govuk-tag--grey app-task-list__tag dashboard-tags" id="early-conciliation-status">Incomplete</strong>
