--- a/app/views/task-list-2-individual.html
+++ b/app/views/task-list-2-individual.html
@@ -66,7 +66,7 @@
       <!-- Section 2 -->
     <li>
       <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">2. </span> Choose what to do next
+        <span class="app-task-list__section-number">2. </span> Your response
       </h2>
       <ul class="app-task-list__items">
         <li class="app-task-list__item">
