--- a/app/views/dates-unavailable.html
+++ b/app/views/dates-unavailable.html
@@ -37,7 +37,7 @@
       <form id="availability-form" method="POST" action="">
         <fieldset class="govuk-fieldset moj-add-another__item">
 
-          <h1 class="govuk-heading-l">Are there any dates in the next 3 months when you cannot attend mediation?</h1>
+          <h1 class="govuk-heading-l">Are there any dates in the next 3 months when you or your nominee cannot attend mediation?</h1>
 
           {% from "govuk/components/radios/macro.njk" import govukRadios %}
           {{ govukRadios({
